@@ -1,6 +1,7 @@
 Broker:
-- allow_zero_length_clientid wasn't being used by the default listener, making
-  it impossible to turn this option off.
+- Various fixes for `allow_zero_length_clientid` config, where this option was
+  not being set correctly. Closes #1429.
+
 
 1.6.7 - 20190925
 ================
